--- a/Admin_Fichaje_Plantilla/ui/mainwindow.ui
+++ b/Admin_Fichaje_Plantilla/ui/mainwindow.ui
@@ -73,7 +73,7 @@
      <string>Conectar</string>
     </property>
    </widget>
-   <widget class="QTabWidget" name="tabWidget">
+   <widget class="QTabWidget" name="logTab">
     <property name="geometry">
      <rect>
       <x>40</x>
@@ -83,8 +83,13 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Log</string>
+     </attribute>
+    </widget>
     <widget class="QWidget" name="registrosTab">
      <attribute name="title">
       <string>Registros abiertos</string>
@@ -223,18 +228,18 @@
        <rect>
         <x>360</x>
         <y>70</y>
-        <width>121</width>
+        <width>61</width>
         <height>18</height>
        </rect>
       </property>
       <property name="text">
-       <string>Nueva contraseña:</string>
+       <string>Nombre:</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="newPassword">
+     <widget class="QLineEdit" name="empleadoNombre">
       <property name="geometry">
        <rect>
-        <x>490</x>
+        <x>440</x>
         <y>60</y>
         <width>171</width>
         <height>32</height>
@@ -244,8 +249,8 @@
      <widget class="QPushButton" name="createEmployee">
       <property name="geometry">
        <rect>
-        <x>550</x>
-        <y>170</y>
+        <x>570</x>
+        <y>290</y>
         <width>88</width>
         <height>34</height>
        </rect>
@@ -254,17 +259,30 @@
        <string>Dar de alta</string>
       </property>
      </widget>
+     <widget class="QLineEdit" name="empleadoApellido">
+      <property name="geometry">
+       <rect>
+        <x>440</x>
+        <y>110</y>
+        <width>171</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
         <x>360</x>
         <y>120</y>
-        <width>221</width>
+        <width>61</width>
         <height>18</height>
        </rect>
       </property>
       <property name="text">
-       <string>El ID se creará automáticamente.</string>
+       <string>Apellido:</string>
       </property>
      </widget>
     </widget>
