--- a/Admin_Fichaje_Plantilla/ui/mainwindow.ui
+++ b/Admin_Fichaje_Plantilla/ui/mainwindow.ui
@@ -73,19 +73,19 @@
      <string>Conectar</string>
     </property>
    </widget>
-   <widget class="QTabWidget" name="logTab">
+   <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>70</y>
-      <width>681</width>
-      <height>371</height>
+      <x>10</x>
+      <y>50</y>
+      <width>781</width>
+      <height>411</height>
      </rect>
     </property>
     <property name="currentIndex">
      <number>3</number>
     </property>
-    <widget class="QWidget" name="tab">
+    <widget class="QWidget" name="logTab">
      <attribute name="title">
       <string>Log</string>
      </attribute>
@@ -158,19 +158,6 @@
      <attribute name="title">
       <string>Empleados</string>
      </attribute>
-     <widget class="QListWidget" name="employeeList">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>40</y>
-        <width>301</width>
-        <height>241</height>
-       </rect>
-      </property>
-      <property name="editTriggers">
-       <set>QAbstractItemView::NoEditTriggers</set>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
@@ -187,9 +174,9 @@
      <widget class="QPushButton" name="removeEmployee">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>290</y>
-        <width>301</width>
+        <x>0</x>
+        <y>330</y>
+        <width>491</width>
         <height>34</height>
        </rect>
       </property>
@@ -200,10 +187,10 @@
      <widget class="Line" name="line">
       <property name="geometry">
        <rect>
-        <x>330</x>
-        <y>10</y>
+        <x>500</x>
+        <y>0</y>
         <width>20</width>
-        <height>321</height>
+        <height>361</height>
        </rect>
       </property>
       <property name="orientation">
@@ -213,7 +200,7 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>470</x>
+        <x>630</x>
         <y>10</y>
         <width>91</width>
         <height>18</height>
@@ -226,7 +213,7 @@
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>360</x>
+        <x>520</x>
         <y>70</y>
         <width>61</width>
         <height>18</height>
@@ -239,7 +226,7 @@
      <widget class="QLineEdit" name="empleadoNombre">
       <property name="geometry">
        <rect>
-        <x>440</x>
+        <x>600</x>
         <y>60</y>
         <width>171</width>
         <height>32</height>
@@ -249,8 +236,8 @@
      <widget class="QPushButton" name="createEmployee">
       <property name="geometry">
        <rect>
-        <x>570</x>
-        <y>290</y>
+        <x>680</x>
+        <y>320</y>
         <width>88</width>
         <height>34</height>
        </rect>
@@ -262,7 +249,7 @@
      <widget class="QLineEdit" name="empleadoApellido">
       <property name="geometry">
        <rect>
-        <x>440</x>
+        <x>600</x>
         <y>110</y>
         <width>171</width>
         <height>32</height>
@@ -275,7 +262,7 @@
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>360</x>
+        <x>520</x>
         <y>120</y>
         <width>61</width>
         <height>18</height>
@@ -284,6 +271,34 @@
       <property name="text">
        <string>Apellido:</string>
       </property>
+     </widget>
+     <widget class="QTableWidget" name="employeeList">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>30</y>
+        <width>491</width>
+        <height>291</height>
+       </rect>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>160</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Nombre</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Apellido</string>
+       </property>
+      </column>
      </widget>
     </widget>
    </widget>
